--- a/templates/index_signin.html
+++ b/templates/index_signin.html
@@ -89,8 +89,7 @@
             <div class="field input-field">
               <input
                 type="text"
-                id="email"
-                placeholder="User name or Email address"
+                placeholder="User name"
                 class="input"
                 required
               />
