--- a/asses/css/style_booking.css
+++ b/asses/css/style_booking.css
@@ -2,7 +2,7 @@ html {
   font-size: 62.5%;
 }
 h1 {
-  color: #00256C;
+  color: #00256c;
   position: relative;
   font-weight: 600;
   font-size: 30px;
@@ -12,14 +12,14 @@ h1 {
 body {
   font-size: 1.6rem;
   font-family: "Sora", sans-serif;
-  color:#00256C;
+  color: #00256c;
 }
 :root {
   --font-heading: "Sora";
   --font-content: "Open Sans";
-  --primary-color: #21A9DE;
-  --header-bg: #00256C;
-  --partners-bg: #F6FBFF;
+  --primary-color: #21a9de;
+  --header-bg: #00256c;
+  --partners-bg: #f6fbff;
   --desc-color: #5f6267;
 }
 
@@ -142,25 +142,23 @@ a {
 }
 
 /* ========== main ========== */
-.main{
+.main {
   padding-left: 80px;
-  display:flex;
+  display: flex;
 }
-.info{
+.info {
   max-width: 900px;
   width: 100%;
-  
 }
 
 /*==== itinerary ====*/
 
-.itinerary{
+.itinerary {
   margin: 0 15px;
   padding-top: 50px;
   padding-bottom: 30px;
- 
 }
-.container__itinerary{
+.container__itinerary {
   margin-top: 20px;
   padding: 30px;
   border-radius: 6px;
@@ -170,68 +168,68 @@ a {
   align-items: center;
   justify-content: space-between;
 }
-.itinerary__box1{
+.itinerary__box1 {
   width: 150px;
-  font-size:24px;
-  color:var(--header-bg);
+  font-size: 24px;
+  color: var(--header-bg);
 }
-.itinerary__box2{
-  color:var(--header-bg);
+.itinerary__box2 {
+  color: var(--header-bg);
   text-align: center;
 }
-.itinerary__des{
-  padding:10px;
-  font-size:10px;
-  color:var(--desc-color);
+.itinerary__des {
+  padding: 10px;
+  font-size: 10px;
+  color: var(--desc-color);
 }
-.btn_box{
+.btn_box {
   padding: 15px;
   width: 100px;
-  font-size:1.2rem;
+  font-size: 1.2rem;
   color: #fff;
-  background:var(--header-bg);
+  background: var(--header-bg);
   border-radius: 10px;
   text-align: center;
 }
-.btn_box:hover{
+.btn_box:hover {
   opacity: 0.9;
   cursor: pointer;
 }
 
 /*==== information ====*/
 
-.information{
+.information {
   margin: 0 15px;
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.information__require{
+.information__require {
   margin: 15px;
   padding-left: 10px;
   font-size: 1.5rem;
 }
-.information__note{
-  padding:15px ;
-  color: #00256C;
+.information__note {
+  padding: 15px;
+  color: #00256c;
   background: #9fbdffa6;
   border-radius: 10px;
   font-size: 1.5rem;
 }
 
 /*==== Passengers ====*/
-.passenger{
+.passenger {
   margin: 0 15px;
 }
 .container {
   border-radius: 6px;
   padding: 30px;
-  background-color:#fff;
+  background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-.passenger__heading{
+.passenger__heading {
   font-size: 2.5rem;
   font-weight: 600;
-  color: var(--header-bg)
+  color: var(--header-bg);
 }
 
 /*==== form ====*/
@@ -294,7 +292,7 @@ select {
   font-weight: 400px;
   color: #333;
   border-radius: 5px;
-  border: 1px solid #00256C;
+  border: 1px solid #00256c;
   padding: 0 15px;
   height: 42px;
   margin: 8px 0;
@@ -306,11 +304,11 @@ select {
 }
 .input-field input:focus {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.13);
-  border: 2px solid #00256C;
+  border: 2px solid #00256c;
   background: #f6f6f6e8;
 }
-.input:focus{
-  border: 4px solid #00256C;
+.input:focus {
+  border: 4px solid #00256c;
 }
 
 .input-field select,
@@ -322,59 +320,57 @@ select {
 }
 
 /* ========== pay ========== */
-.total_amount{
+.total_amount {
   position: fixed;
   top: 650px;
   display: flex;
   width: 100%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  background:#fff;
+  background: #fff;
   border: #000;
-  border-radius: 10px 10px 10px 10px ;
-
+  border-radius: 10px 10px 10px 10px;
 }
-.total1{
+.total1 {
   padding: 100px;
-  flex:60%;
+  flex: 60%;
   text-align: left;
 }
-.total2{
-  flex:20%;
+.total2 {
+  flex: 20%;
   text-align: left;
 }
-.total3{
-  flex:20%;
+.total3 {
+  flex: 20%;
 }
 
-.add-booking{
+.add-booking {
   margin: 0 15px;
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.add-booking__icon{
+.add-booking__icon {
   display: flex;
-  align-items:end;
+  align-items: end;
   justify-content: center;
   gap: 20px;
 }
-.add-booking:hover .add-booking__icon{
+.add-booking:hover .add-booking__icon {
   cursor: pointer;
   transform: scale(1.1);
-
 }
-.add__tickets{
-  color:var(--header-bg);
+.add__tickets {
+  color: var(--header-bg);
 }
 
 /*==== calculation ====*/
 
-.calculation{
-  margin:60px;
+.calculation {
+  margin: 60px;
   position: sticky;
   top: 10px;
-  left:10px;
+  left: 10px;
 }
-.calculation__container{
+.calculation__container {
   max-width: 320px;
   width: 100%;
   margin: 0 15px;
@@ -385,68 +381,151 @@ select {
   display: flex;
   flex-direction: column;
 }
-.calculation__heading{
+.calculation__heading {
   font-size: 2rem;
   text-align: center;
   padding: 10px;
 }
-.container__calculation{
-  padding:20px 30px 20px 30px;
+.container__calculation {
+  padding: 20px 30px 20px 30px;
 }
-.calculation__li{
+.calculation__li {
   padding: 5px;
   display: flex;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  
 }
-.total{
-  font-size:1.85rem;
-  text-decoration-thickness:5px;
+.total {
+  font-size: 1.85rem;
+  text-decoration-thickness: 5px;
 }
-.calculation__pay{
+.calculation__pay {
   color: #fff;
-  background:#00256C;
+  background: #00256c;
   padding: 15px;
   border-radius: 10px;
 }
-.calculation__pay:hover{
+.calculation__pay:hover {
   opacity: 0.9;
   cursor: pointer;
 }
-.calculation__li_money{
+.calculation__li_money {
   padding: 5px;
-  text-align:right;
-  color:#333;
-  font-size:13px;
-
+  text-align: right;
+  color: #333;
+  font-size: 13px;
 }
 
 .btn_confirm {
-  width:120px;
+  width: 120px;
   margin-top: 20px;
   border-radius: 10px;
   padding: 15px;
   font-size: 14px;
   font-weight: 400;
-  border: 1px solid #00256C;
-  background-color:#00256C;
-  color:#ffffff;
-
+  border: 1px solid #00256c;
+  background-color: #00256c;
+  color: #ffffff;
 }
 
 .btn_confirm:hover {
-   opacity:0.8;
+  opacity: 0.8;
 }
-.btn_confirm:focus{
+.btn_confirm:focus {
   background-color: #ffffff;
-  color:#00256C;
+  color: #00256c;
 }
-.btn_confirm:visited{
+.btn_confirm:visited {
   background-color: #ffffff;
-  color:#00256C;
+  color: #00256c;
 }
-.confirm{
+.confirm {
   justify-content: center;
+}
+
+/* test */
+.congratulation__action {
+  width: 150px;
+  height: 40px;
+  background: #fff;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.user_name {
+  color: #00256c;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.congratulation__action:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+/* test */
+.info__personal {
+  padding: 20px;
+  width: 250px;
+  height: 230px;
+  background: #fff;
+  text-align: center;
+
+  position: fixed;
+  right: 0; /* Đặt vị trí ở phía trái */
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.name__heading {
+  margin-top: 10px;
+  color: #00256c;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.3;
+}
+.name__desc {
+  color: #9e9e9e;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.underlined {
+  margin: 10px 0 10px;
+  width: 270px;
+  height: 1px;
+  background: #d9d9d9;
+}
+
+.name__id,
+.name__functions {
+  color: #00256c;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+.personal__page,
+.booked__tickets,
+.log_out {
+  padding-left: 20px;
+  margin: 10px auto;
+  width: 250px;
+  height: 45px;
+
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.personal__page:hover,
+.booked__tickets:hover,
+.log_out:hover {
+  border-radius: 10px;
+  background: #d9d9d9;
 }
