--- a/asses/css/style_home.css
+++ b/asses/css/style_home.css
@@ -11,9 +11,9 @@ body {
 :root {
   --font-heading: "Sora";
   --font-content: "Open Sans";
-  --primary-color: #21A9DE;
-  --header-bg: #00256C;
-  --partners-bg: #F6FBFF;
+  --primary-color: #21a9de;
+  --header-bg: #00256c;
+  --partners-bg: #f6fbff;
 }
 
 /* ========== common ========== */
@@ -135,7 +135,7 @@ a {
 
 /* ===== hero ===== */
 .hero__heading {
-  color: #FFF;
+  color: #fff;
   text-align: center;
   font-size: 7rem;
   font-weight: 600;
@@ -148,7 +148,7 @@ a {
   font-size: 1.8rem;
   font-weight: 400;
   line-height: 1.67;
-  width:  458px;
+  width: 458px;
   text-align: center;
 }
 .hero__row {
@@ -163,7 +163,7 @@ a {
   font-weight: 400;
   line-height: 1.67;
 }
-.hero{
+.hero {
   display: flex;
   position: relative;
 }
@@ -173,9 +173,9 @@ a {
   position: absolute;
   display: flex;
   flex-direction: column;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
-  text-align: center; 
+  text-align: center;
 }
 .hero__img {
   min-width: 100vw;
@@ -183,28 +183,28 @@ a {
 }
 
 /* ===== partners ===== */
-.partners{
+.partners {
   min-width: 100vw;
   min-height: 100vh;
   background: var(--partners-bg);
 }
-.partners__heading{
+.partners__heading {
   padding: 90px;
   text-align: center;
 }
-.partners__box{
+.partners__box {
   width: 100%;
   height: 200px;
   background: #ffff;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  justify-content:space-around;
+  justify-content: space-around;
 }
 .image__top,
-.image__bottom{
+.image__bottom {
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
   gap: 20px;
 }
@@ -244,7 +244,7 @@ a {
   /* tg xuat mat hieu ung */
   transition: 0.25s;
 }
-.service-item:hover{
+.service-item:hover {
   /* cach xu li bong do bi che */
   position: relative;
   box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
@@ -304,7 +304,6 @@ a {
   justify-content: space-between;
 }
 .book-item {
- 
   padding: 40px;
   border: 16px solid #eaf6ff;
   border-radius: 4px;
@@ -363,7 +362,7 @@ a {
 }
 .destination__title {
   margin: 80px;
-  color:var(--header-bg);
+  color: var(--header-bg);
   font-family: Sora;
   font-size: 4rem;
   font-weight: 600;
@@ -409,9 +408,9 @@ a {
 }
 
 /* ===== mobile  ===== */
-.install{
+.install {
   height: 427px;
-  background: #F6FBFF;
+  background: #f6fbff;
 }
 .install__inner {
   margin: 180px 0 85px;
@@ -441,7 +440,7 @@ a {
 }
 .install__desc {
   margin-top: 18px;
-  color: #575F66;
+  color: #575f66;
   font-size: 1.8rem;
   font-weight: 300;
   line-height: 1.67;
@@ -563,11 +562,11 @@ a {
   justify-content: space-between;
   gap: 20px;
 }
-.footer__social{
+.footer__social {
   padding: 10px;
   justify-content: center;
 }
-.footer__heading{
+.footer__heading {
   margin-top: 35px;
   color: #fff;
   font-size: 1.6rem;
@@ -581,7 +580,7 @@ a {
   font-weight: 400;
   line-height: 1.75;
 }
-.address__column{
+.address__column {
   max-width: 250px;
 }
 .footer__link {
@@ -618,5 +617,88 @@ a {
   line-height: 1.86;
 }
 
+/* test */
+.congratulation__action {
+  width: 150px;
+  height: 40px;
+  background: #fff;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.user_name {
+  color: #00256c;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.congratulation__action:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
 
+/* test */
+.info__personal {
+  padding: 20px;
+  width: 250px;
+  height: 270px;
+  background: #fff;
+  text-align: center;
 
+  position: fixed;
+  right: 0; /* Đặt vị trí ở phía trái */
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.name__heading {
+  margin-top: 10px;
+  color: #00256c;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.3;
+}
+.name__desc {
+  color: #9e9e9e;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.underlined {
+  margin: 10px 0 10px;
+  width: 270px;
+  height: 1px;
+  background: #d9d9d9;
+}
+
+.name__id,
+.name__functions {
+  color: #00256c;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+.personal__page,
+.booked__tickets,
+.log_out {
+  padding-left: 20px;
+  margin: 10px auto;
+  width: 250px;
+  height: 45px;
+
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.personal__page:hover,
+.booked__tickets:hover,
+.log_out:hover {
+  border-radius: 10px;
+  background: #d9d9d9;
+}
