--- a/asses/css/style_regulations_staff.css
+++ b/asses/css/style_regulations_staff.css
@@ -1,143 +1,141 @@
 * {
-    box-sizing: border-box;
-  }
-  html {
-    font-size: 62.5%;
-  }
-  body {
-    font-size: 1.6rem;
-    font-family: "Sora", sans-serif;
-  }
-  :root {
-    --font-heading: "Sora";
-    --font-content: "Open Sans";
-    --primary-color: #21A9DE;
-    --header-bg: #00256C;
-    --partners-bg: #F6FBFF;
-  }
-  
-  /* ========== common ========== */
-  /* se co nhung the khong an theo thuoc tinh chung */
-  input,
-  textarea,
-  select,
-  button {
-    font-family: inherit;
-    font-size: inherit;
-  }
-  .container {
-    width: 1170px;
-    margin: 0 auto;
-    max-width: calc(100% - 48px);
-  }
-  a {
-    text-decoration: none;
-  }
-  .btn {
-    /* box chua */
-    display: inline-block;
-    min-width: 205px;
-    line-height: 60px;
-    border-radius: 30px;
-    background: var(--primary-color);
-  
-    /* text */
-    text-align: center;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 400;
-  }
-  .btn:hover {
-    /* Lam mo nen */
-    opacity: 0.9;
-  }
-  .section-heading {
-    color: var(--header-bg);
-    font-size: 5rem;
-    font-weight: 600;
-    line-height: 1.2;
-    letter-spacing: -1px;
-  }
-  .section-desc {
-    color: #575f66;
-    font-size: 1.8rem;
-    font-weight: 300;
-    line-height: 1.67;
-  }
-  .control {
-    display: flex;
-    column-gap: 18px;
-    align-items: center;
-  }
-  .control__btn {
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #575f66;
-    background: #fff;
-    cursor: pointer;
-    transition: 0.25s;
-  }
-  .control__btn:hover {
-    background: var(--primary-color);
-    border-color: var(--primary-color);
-    color: #fff;
-  }
-  .control__btn--next {
-    rotate: 180deg;
-  }
-  
-  /* ========== header ========== */
-  .header {
-    background: var(--header-bg);
-    min-width: 100vw;
-  }
-  .menu {
-    padding: 10px;
-    width: 1400px;
-    margin: 0 auto;
-    max-width: calc(100% - 48px);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .navbar__list {
-    display: flex;
-  }
-  .header__action--login,
-  .navbar__link {
-    padding: 8px 21px;
-    color: #c9d2da;
-    font-size: 1.6rem;
-    font-weight: 300;
-    line-height: 1.75;
-  }
-  .navbar__link:hover,
-  .navbar__link--active {
-    color: #fff;
-    /* font-weight: 400; -> ko dung vi no se day cac ptu khi weight thay doi */
-    text-shadow: 1px 0 0 currentColor;
-    line-height: 1.75;
-  }
-  .header__action--signup {
-    min-width: 104px;
-    line-height: 44px;
-    font-size: 1.6rem;
-  }
-  .header__action--login {
-    margin-right: 7px;
-  }
-  
-  /* ========== main ========== */
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-size: 1.6rem;
+  font-family: "Sora", sans-serif;
+}
+:root {
+  --font-heading: "Sora";
+  --font-content: "Open Sans";
+  --primary-color: #21a9de;
+  --header-bg: #00256c;
+  --partners-bg: #f6fbff;
+}
 
-  
-  
+/* ========== common ========== */
+/* se co nhung the khong an theo thuoc tinh chung */
+input,
+textarea,
+select,
+button {
+  font-family: inherit;
+  font-size: inherit;
+}
+.container {
+  width: 1170px;
+  margin: 0 auto;
+  max-width: calc(100% - 48px);
+}
+a {
+  text-decoration: none;
+}
+.btn {
+  /* box chua */
+  display: inline-block;
+  min-width: 205px;
+  line-height: 60px;
+  border-radius: 30px;
+  background: var(--primary-color);
+
+  /* text */
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+}
+.btn:hover {
+  /* Lam mo nen */
+  opacity: 0.9;
+}
+.section-heading {
+  color: var(--header-bg);
+  font-size: 5rem;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1px;
+}
+.section-desc {
+  color: #575f66;
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 1.67;
+}
+.control {
+  display: flex;
+  column-gap: 18px;
+  align-items: center;
+}
+.control__btn {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #575f66;
+  background: #fff;
+  cursor: pointer;
+  transition: 0.25s;
+}
+.control__btn:hover {
+  background: var(--primary-color);
+  border-color: var(--primary-color);
+  color: #fff;
+}
+.control__btn--next {
+  rotate: 180deg;
+}
+
+/* ========== header ========== */
+.header {
+  background: var(--header-bg);
+  min-width: 100vw;
+}
+.menu {
+  padding: 10px;
+  width: 1400px;
+  margin: 0 auto;
+  max-width: calc(100% - 48px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar__list {
+  display: flex;
+}
+.header__action--login,
+.navbar__link {
+  padding: 8px 21px;
+  color: #c9d2da;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.75;
+}
+.navbar__link:hover,
+.navbar__link--active {
+  color: #fff;
+  /* font-weight: 400; -> ko dung vi no se day cac ptu khi weight thay doi */
+  text-shadow: 1px 0 0 currentColor;
+  line-height: 1.75;
+}
+.header__action--signup {
+  min-width: 104px;
+  line-height: 44px;
+  font-size: 1.6rem;
+}
+.header__action--login {
+  margin-right: 7px;
+}
+
+/* ========== main ========== */
+
 /* ===== hero ===== */
 .hero__heading {
-  color: #FFF;
+  color: #fff;
   text-align: center;
   font-size: 7rem;
   font-weight: 600;
@@ -150,7 +148,7 @@
   font-size: 1.8rem;
   font-weight: 400;
   line-height: 1.67;
-  width:  458px;
+  width: 458px;
   text-align: center;
 }
 .hero__row {
@@ -165,7 +163,7 @@
   font-weight: 400;
   line-height: 1.67;
 }
-.hero{
+.hero {
   display: flex;
   position: relative;
 }
@@ -175,22 +173,21 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
-  text-align: center; 
+  text-align: center;
 }
 .hero__img {
   min-width: 100vw;
   object-fit: cover;
 }
 
-
 /* ===== how  ===== */
 .book {
   padding: 100px 0;
   background: #f6fbff;
 }
-.book__heading{
+.book__heading {
   text-align: center;
 }
 .book__desc {
@@ -206,7 +203,6 @@
   justify-content: space-between;
 }
 .book-item {
- 
   padding: 40px;
   border: 16px solid #eaf6ff;
   border-radius: 4px;
@@ -245,4 +241,90 @@
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.75;
+}
+
+/* test */
+.congratulation__action {
+  width: 150px;
+  height: 40px;
+  background: #fff;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.user_name {
+  color: #00256c;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.congratulation__action:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+/* test */
+.info__personal {
+  padding: 20px;
+  width: 250px;
+  height: 150px;
+  background: #fff;
+  text-align: center;
+
+  position: fixed;
+  right: 0; /* Đặt vị trí ở phía trái */
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.name__heading {
+  margin-top: 10px;
+  color: #00256c;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.3;
+}
+.name__desc {
+  color: #9e9e9e;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.underlined {
+  margin: 10px 0 10px;
+  width: 270px;
+  height: 1px;
+  background: #d9d9d9;
+}
+
+.name__id,
+.name__functions {
+  color: #00256c;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+.personal__page,
+.booked__tickets,
+.log_out {
+  padding-left: 20px;
+  margin: 10px auto;
+  width: 250px;
+  height: 45px;
+
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.personal__page:hover,
+.booked__tickets:hover,
+.log_out:hover {
+  border-radius: 10px;
+  background: #d9d9d9;
 }
