--- a/asses/css/style_search_staff.css
+++ b/asses/css/style_search_staff.css
@@ -14,14 +14,12 @@ body {
 :root {
   --font-heading: "Sora";
   --font-content: "Open Sans";
-  --primary-color: #21A9DE;
-  --header-bg: #00256C;
-  --partners-bg: #F6FBFF;
+  --primary-color: #21a9de;
+  --header-bg: #00256c;
+  --partners-bg: #f6fbff;
 }
 
-
 /* ========== common ========== */
-
 
 /* se co nhung the khong an theo thuoc tinh chung */
 
@@ -106,7 +104,6 @@ a {
   rotate: 180deg;
 }
 
-
 /* ========== header ========== */
 
 .header {
@@ -155,11 +152,10 @@ a {
   margin-right: 7px;
 }
 
-
 /* ========== main ========== */
 
 /* heading */
-.lookup_heading{
+.lookup_heading {
   text-align: center;
   margin: 60px;
   color: var(--header-bg);
@@ -168,7 +164,7 @@ a {
 }
 
 /* search */
-.search_heading{
+.search_heading {
   color: var(--header-bg);
   width: 50px;
   font-size: 20px;
@@ -177,14 +173,14 @@ a {
 }
 .search,
 .search-top,
-.search-bottom{
+.search-bottom {
   display: flex;
   align-items: center;
   justify-content: space-around;
   gap: 20px;
 }
 .search-top,
-.search-bottom{
+.search-bottom {
   margin: 20px;
 }
 
@@ -218,4 +214,90 @@ td {
 
 tr:hover {
   background-color: rgb(193, 231, 234);
+}
+
+/* test */
+.congratulation__action {
+  width: 150px;
+  height: 40px;
+  background: #fff;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.user_name {
+  color: #00256c;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.congratulation__action:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+/* test */
+.info__personal {
+  padding: 20px;
+  width: 250px;
+  height: 150px;
+  background: #fff;
+  text-align: center;
+
+  position: fixed;
+  right: 0; /* Đặt vị trí ở phía trái */
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.name__heading {
+  margin-top: 10px;
+  color: #00256c;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.3;
+}
+.name__desc {
+  color: #9e9e9e;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+.underlined {
+  margin: 10px 0 10px;
+  width: 270px;
+  height: 1px;
+  background: #d9d9d9;
+}
+
+.name__id,
+.name__functions {
+  color: #00256c;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+.personal__page,
+.booked__tickets,
+.log_out {
+  padding-left: 20px;
+  margin: 10px auto;
+  width: 250px;
+  height: 45px;
+
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.personal__page:hover,
+.booked__tickets:hover,
+.log_out:hover {
+  border-radius: 10px;
+  background: #d9d9d9;
 }
