--- a/templates/index_adding_staff.html
+++ b/templates/index_adding_staff.html
@@ -14,187 +14,265 @@
     <!-- font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&family=Sora:wght@100..800&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
 
     <!-- font icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+
     <!-- reset css -->
     <link rel="stylesheet" href="/asses/css/reset.css" />
     <!-- style css -->
     <link rel="stylesheet" href="/asses/css/style_adding_staff.css" />
-    
+
     <title>VietHub Airline</title>
   </head>
   <body>
-
     <!-- header -->
     <header class="header">
-        <div class="menu">
-          <!-- Logo -->
-          <a href="./"
-            ><img
-              src="/asses/favicon/Logo_Gr.svg"
-              alt="Shine smile"
-              class="logo header__logo"
-          /></a>
-          <!-- Navbar  -->
-          <nav class="navbar">
-            <ul class="navbar__list" id="navbar__list--pc">
-              <li class="navbar__item">
-                <a href="/templates/index_reservation_staff.html" class="navbar__link">Reservation</a>
-              </li>
-              <li class="navbar__item">
-                <a href="/templates/index_search_staff.html" class="navbar__link">Flight</a>
-              </li>
-              <li class="navbar__item">
-                <a href="/templates/index_adding_staff.html" class="navbar__link navbar__link--active">Add Flight</a>
-              </li>
-              <li class="navbar__item">
-                <a href="/templates/index_report_staff.html" class="navbar__link">Report</a>
-              </li>
-              <li class="navbar__item">
-                <a href="/templates/index_regulations_staff.html" class="navbar__link">Regulations</a>
-              </li>
-            </ul>
-          </nav>
-          <!-- cta action -->
-          <div class="header__action">
-            <a href="/templates/index_signin.html" class="header__action--login">Log in</a>
-            <a href="/templates/index_signup.html" class="btn header__action--signup">Sign up</a>
-          </div>
+      <div class="menu">
+        <!-- Logo -->
+        <a href="./"
+          ><img
+            src="/asses/favicon/Logo_Gr.svg"
+            alt="Shine smile"
+            class="logo header__logo"
+        /></a>
+        <!-- Navbar  -->
+        <nav class="navbar">
+          <ul class="navbar__list" id="navbar__list--pc">
+            <li class="navbar__item">
+              <a
+                href="/templates/index_reservation_staff.html"
+                class="navbar__link"
+                >Reservation</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a href="/templates/index_search_staff.html" class="navbar__link"
+                >Flight</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a
+                href="/templates/index_adding_staff.html"
+                class="navbar__link navbar__link--active"
+                >Add Flight</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a href="/templates/index_report_staff.html" class="navbar__link"
+                >Report</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a
+                href="/templates/index_regulations_staff.html"
+                class="navbar__link"
+                >Regulations</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <!-- cta action -->
+        <div class="congratulation__action">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            viewBox="0 0 448 512"
+          >
+            <path
+              d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z"
+            />
+          </svg>
+          <p class="user_name">Staff</p>
         </div>
+      </div>
+      <section class="info__personal" style="display: none">
+        <div class="info__name">
+          <h2 class="name__heading">Nguyen Hong Phat</h2>
+          <p class="name__desc">(Staff)</p>
+          <div class="underlined"></div>
+        </div>
+        <div class="user_functions">
+          <a href="#">
+            <div class="log_out">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                viewBox="0 0 512 512"
+                fill="#00256C"
+              >
+                <path
+                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"
+                />
+              </svg>
+              <h2 class="name__functions">Log out</h2>
+            </div>
+          </a>
+        </div>
+      </section>
+    </div>
     </header>
 
     <section class="hero">
-        <img
-          class="hero__img "
-          src="/asses/img/plane_0.svg"
-          alt="Plane_0"
-        />
-        <div class="hero__content">
-            <h1 class="hero__heading">VietHub</h1>
-            <h1 class="hero__heading">Add Flight</h1>
-        </div> 
-      </section>
+      <img class="hero__img" src="/asses/img/plane_0.svg" alt="Plane_0" />
+      <div class="hero__content">
+        <h1 class="hero__heading">VietHub</h1>
+        <h1 class="hero__heading">Add Flight</h1>
+      </div>
+    </section>
 
     <!-- main -->
     <main>
-        <div class="container">
-            <form>
-                <div class="fields">
-                    <div class="input-field">
-                        <label>Flight ID:</label>
-                        <input type="text" placeholder="Enter flight ID" required>
-                    </div>
-                    <div class="input-field">
-                        <label>Plane ID:</label>
-                        <input type="text" placeholder="Enter plane ID"required >
-                    </div>
-                    <div class="input-field">
-                        <label>From:</label>
-                        <select required >
-                            <option disabled selected>Select station</option>
-                            <option>SGN</option>
-                            <option>HN</option>
-                            <option>DL</option>
-                            <option>Korea</option>
-                            <option>China</option>
-                        </select>
-                    </div>
-                    <div class="input-field">
-                        <label>To:</label>
-                        <select required>
-                            <option disabled selected>Select station</option>
-                            <option>SGN</option>
-                            <option>HN</option>
-                            <option>DL</option>
-                            <option>Korea</option>
-                            <option>China</option>
-                        </select>
-                    </div>
-                    <div class="input-field">
-                        <label>Time-Date:</label>
-                        <input type="datetime-local" placeholder="Enter time and date"required >
-                    </div>
-                    <div class="input-field">
-                        <label>Duration:</label>
-                        <input type="text" placeholder="Enter duration" required>
-                    </div>
-                    <div class="input-field">
-                        <label>Prestige Class Number:</label>
-                        <input type="number" placeholder="Enter the chair number of prestige class" required>
-                    </div>
-                    
-                    <div class="input-field">
-                        <label>Economy Class Number:</label>
-                        <input type="number" placeholder="Enter the chair number of economy class" required>
-                    </div>
-                    
-                    <div class="input-field">
-                        <label>Price:</label>
-                        <input type="number" placeholder="Enter price"required>
-                    </div>
+      <div class="container">
+        <form>
+          <div class="fields">
+            <div class="input-field">
+              <label>Flight ID:</label>
+              <input type="text" placeholder="Enter flight ID" required />
+            </div>
+            <div class="input-field">
+              <label>Plane ID:</label>
+              <input type="text" placeholder="Enter plane ID" required />
+            </div>
+            <div class="input-field">
+              <label>From:</label>
+              <select required>
+                <option disabled selected>Select station</option>
+                <option>SGN</option>
+                <option>HN</option>
+                <option>DL</option>
+                <option>Korea</option>
+                <option>China</option>
+              </select>
+            </div>
+            <div class="input-field">
+              <label>To:</label>
+              <select required>
+                <option disabled selected>Select station</option>
+                <option>SGN</option>
+                <option>HN</option>
+                <option>DL</option>
+                <option>Korea</option>
+                <option>China</option>
+              </select>
+            </div>
+            <div class="input-field">
+              <label>Time-Date:</label>
+              <input
+                type="datetime-local"
+                placeholder="Enter time and date"
+                required
+              />
+            </div>
+            <div class="input-field">
+              <label>Duration:</label>
+              <input type="text" placeholder="Enter duration" required />
+            </div>
+            <div class="input-field">
+              <label>Prestige Class Number:</label>
+              <input
+                type="number"
+                placeholder="Enter the chair number of prestige class"
+                required
+              />
+            </div>
 
+            <div class="input-field">
+              <label>Economy Class Number:</label>
+              <input
+                type="number"
+                placeholder="Enter the chair number of economy class"
+                required
+              />
+            </div>
+
+            <div class="input-field">
+              <label>Price:</label>
+              <input type="number" placeholder="Enter price" required />
+            </div>
+          </div>
+
+          <div class="container_inter">
+            <div class="add_station_title">
+              <div class="inter_title">Intermediate Stations</div>
+
+              <div class="btn_sign">
+                <button
+                  id="add_station"
+                  class="btn_add_sign"
+                  onclick="ShowDialog()"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="25"
+                    height="29"
+                    viewBox="0 0 448 512"
+                  >
+                    <path
+                      d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </button>
+              </div>
+
+              <dialog id="dialog">
+                <div class="wrapper">
+                  <div class="field_add_station">
+                    <label class="label_station">Station</label>
+                    <select id="name_dialog" required>
+                      <option disabled selected>Select station</option>
+                      <option>SGN</option>
+                      <option>HN</option>
+                      <option>DL</option>
+                      <option>Korea</option>
+                      <option>China</option>
+                    </select>
+
+                    <label class="label_station">Duration:</label>
+                    <input
+                      required
+                      id="duration_dialog"
+                      class="input_station"
+                      type="number"
+                      placeholder="Enter duration"
+                    />
+
+                    <label class="label_station">Note:</label>
+                    <input
+                      id="note_dialog"
+                      class="input_station"
+                      type="text"
+                      placeholder="Take note"
+                    />
+
+                    <button
+                      id="confirmAdd"
+                      onclick="InfoDialog()"
+                      class="btn_station"
+                    >
+                      Confirm
+                    </button>
+                    <button
+                      class="btn_station"
+                      type="button"
+                      onclick="CloseDialog()"
+                    >
+                      Cancel
+                    </button>
+                  </div>
                 </div>
+              </dialog>
+            </div>
+          </div>
 
-                
-
-            <div class="container_inter">
-                <div class="add_station_title">
-
-                    <div class="inter_title">Intermediate Stations</div>
-
-                    <div class="btn_sign">
-                      <button id="add_station" class="btn_add_sign" onclick="ShowDialog()" >
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="29" viewBox="0 0 448 512">
-                        <path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" fill="currentColor"/></svg>
-                      </button>
-                    </div>
-
-                      <dialog id='dialog'>
-                        <div class ="wrapper">
-                          
-                            <div class= "field_add_station"> 
-                            
-                              <label class="label_station">Station</label>
-                              <select id='name_dialog' required >
-                                  <option disabled selected>Select station</option>
-                                  <option>SGN</option>
-                                  <option>HN</option>
-                                  <option>DL</option>
-                                  <option>Korea</option>
-                                  <option>China</option>
-                              </select>
-                            
-
-                            
-                              <label class="label_station">Duration:</label>
-                              <input required id='duration_dialog' class="input_station" type="number" placeholder="Enter duration" >
-                            
-                            
-                            
-                              <label class="label_station">Note:</label>
-                              <input id='note_dialog' class="input_station" type="text" placeholder="Take note">
-                            
-                             <button id="confirmAdd" onclick='InfoDialog()' class="btn_station">Confirm</button>
-                            <button class="btn_station" type="button" onclick="CloseDialog()">Cancel</button>
-                            
-                          
-                        </div>
-
-                        
-                        </div>
-                      
-                      </dialog>
-                      
-                    </div>
-                      
-
-                </div>
-
-                <div id='container_list'> 
-                  <!--
+          <div id="container_list">
+            <!--
                 <div class="add_station">
                     <div class="add_planeStation">
                       <div class="air_plane">
@@ -244,15 +322,12 @@
             </div>
             -->
           </div>
-          
-          
+
           <div class="btn_center">
             <button type="submit" class="btn_confirm_add">Confirm</button>
-        </div> 
-
+          </div>
         </form>
-            
-    </div>
+      </div>
     </main>
     <script src="/asses/js/adding.js"></script>
   </body>
