--- a/templates/index_profile.html
+++ b/templates/index_profile.html
@@ -56,16 +56,49 @@
             <li class="navbar__item">
               <a href="/templates/index.html" class="navbar__link">Contact</a>
             </li>
-            <li class="navbar__item">
-              <a href="/templates/index_adding.html" class="navbar__link">BookTicket</a>
-            </li>
           </ul>
         </nav>
         <!-- cta action -->
-        <div class="header__action">
-          <a href="/templates/index_signin.html" class="header__action--login">Log in</a>
-          <a href="/templates/index_signup.html" class="btn header__action--signup">Sign up</a>
+        <div class="congratulation__action">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 448 512">
+          <path d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z"/></svg>
+          <p class="user_name">User</p>
         </div>
+      </div>
+      <section class="info__personal" style="display: none;">
+    
+        <div class="info__name">
+            <h2 class="name__heading">Nguyen Hong Phat</h2>
+            <p class="name__desc">(User)</p>
+            <div class="underlined"></div>
+        </div>
+        <div class="user_functions">
+          <a href="\templates\index_profile.html">
+            <div class="personal__page">
+            
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" viewBox="0 0 448 512" fill="#00256C">
+                    <path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/>
+                </svg>                 
+            <h2 class="name__functions"> Personal Page</h2>
+            </div>
+          </a>
+          <a href="\templates\index_reservation.html">
+            <div class="booked__tickets"> 
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" viewBox="0 0 576 512" fill="#00256C">
+                    <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"/>
+                </svg>
+            <h2 class="name__functions"> Booked Tickets</h2>
+            </div>
+          </a>        
+          <a href="#">
+            <div class="log_out">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30"  viewBox="0 0 512 512" fill="#00256C">
+                <path d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"/></svg>
+                <h2 class="name__functions"> Log out</h2>
+            </div>
+          </a>        
+        </div>
+      </section>
       </div>
     </header>
 
