--- a/templates/index_reservation_staff.html
+++ b/templates/index_reservation_staff.html
@@ -58,11 +58,45 @@
             </ul>
           </nav>
           <!-- cta action -->
-          <div class="header__action">
-            <a href="/templates/index_signin.html" class="header__action--login">Log in</a>
-            <a href="/templates/index_signup.html" class="btn header__action--signup">Sign up</a>
-          </div>
+          <!-- cta action -->
+        <div class="congratulation__action">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            viewBox="0 0 448 512"
+          >
+            <path
+              d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z"
+            />
+          </svg>
+          <p class="user_name">Staff</p>
         </div>
+      </div>
+      <section class="info__personal" style="display: none">
+        <div class="info__name">
+          <h2 class="name__heading">Nguyen Hong Phat</h2>
+          <p class="name__desc">(Staff)</p>
+          <div class="underlined"></div>
+        </div>
+        <div class="user_functions">
+          <a href="#">
+            <div class="log_out">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                viewBox="0 0 512 512"
+                fill="#00256C"
+              >
+                <path
+                  d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"
+                />
+              </svg>
+              <h2 class="name__functions">Log out</h2>
+            </div>
+          </a>
+        </div>
+      </section>
+    </div>
     </header>
 
     <!-- main -->
@@ -107,50 +141,49 @@
       </div>
 
         
-      <!-- Tao bang-->
-        <table id="table_class" class="table">
-          <div class="table_title">
-            <tr>
-              <th>PNR</th>
-              <th>Ticket ID</th>
-              <th>Class ID</th>
-              <th>Seat ID</th>
-              <th>Passanger ID</th>
-              <th>Passanger Type</th>
-              <th>Price Ticket</th>
-             <th>Date of Reservation</th>
-             <th>Ticket Issue Date</th>
-            </tr>
-          </div>
-          <div class="table_row">
-            <tr>
-              <td>VN01</td>
-              <td>VE01</td>
-              <td>2</td>
-              <td>VIP01</td>
-              <td>987346254678</td>
-              <td>Adult</td>
-              <td>1.100.000VND</td>
-              <td>10-5-2024</td>
-              <td>20-5-2024</td>
-            </tr>
-          </div>
-
-          <div class="table_row">
-            <tr>
-              <td>VN02</td>
-              <td>VE02</td>
-              <td>1</td>
-              <td>A01</td>
-              <td>989876254678</td>
-              <td>Adult</td>
-              <td>300.000VND</td>
-              <td>13-5-2024</td>
-              <td>25-5-2024</td>
-            </tr>
-          </div>
-
+      <table id="table_class" class="table">
+        <thead>
+          <tr>
+            <th>PNR</th>
+            <th>Ticket ID</th>
+            <th>Class ID</th>
+            <th>Seat ID</th>
+            <th>Passanger ID</th>
+            <th>Passanger Type</th>
+            <th>Price Ticket</th>
+            <th>Date of Reservation</th>
+            <th>Ticket Issue Date</th>
+            <th>Issue Flight Ticket</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>VN01</td>
+            <td>VE01</td>
+            <td>2</td>
+            <td>VIP01</td>
+            <td>987346254678</td>
+            <td>Adult</td>
+            <td>1.100.000VND</td>
+            <td>10-5-2024</td>
+            <td>20-5-2024</td>
+            <td><button class="issue-ticket-btn">Issue Ticket</button></td>
+          </tr>
+          <tr>
+            <td>VN02</td>
+            <td>VE02</td>
+            <td>1</td>
+            <td>A01</td>
+            <td>989876254678</td>
+            <td>Adult</td>
+            <td>300.000VND</td>
+            <td>13-5-2024</td>
+            <td> </td>
+            <td><button class="issue-ticket-btn">Issue Ticket</button></td>
+          </tr>
+        </tbody>
       </table>
+      
       
          
       </section>
