--- a/templates/index_search_staff.html
+++ b/templates/index_search_staff.html
@@ -14,147 +14,210 @@
     <!-- font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&family=Sora:wght@100..800&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
 
     <!-- font icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+
     <!-- reset css -->
-    <link rel="stylesheet" href="/asses/css/reset.css"/>
+    <link rel="stylesheet" href="/asses/css/reset.css" />
     <!-- style css -->
     <link rel="stylesheet" href="/asses/css/style_search_staff.css" />
-    
+
     <title>VietHub Airline</title>
   </head>
   <body>
-
     <!-- header -->
     <header class="header">
-        <div class="menu">
-          <!-- Logo -->
-          <img
-              src="/asses/favicon/Logo_Gr.svg"
-              alt="Shine smile"
-              class="logo header__logo"
-          />
-          <!-- Navbar  -->
-          <nav class="navbar">
-            <ul class="navbar__list" id="navbar__list--pc">
-              <li class="navbar__item">
-                <a href="/templates/index_reservation_staff.html" class="navbar__link">Reservation</a>
-              </li>
-              <li class="navbar__item">
-                <a href="/templates/index_search_staff.html" class="navbar__link navbar__link--active">Flight</a>
-              </li>
-              <li class="navbar__item">
-                <a href="/templates/index_adding_staff.html" class="navbar__link">Add Flight</a>
-              </li>
-              <li class="navbar__item">
-                <a href="/templates/index_report_staff.html" class="navbar__link">Report</a>
-              </li>
-              <li class="navbar__item">
-                <a href="/templates/index_regulations_staff.html" class="navbar__link">Regulations</a>
-              </li>
-            </ul>
-          </nav>
+      <div class="menu">
+        <!-- Logo -->
+        <img
+          src="/asses/favicon/Logo_Gr.svg"
+          alt="Shine smile"
+          class="logo header__logo"
+        />
+        <!-- Navbar  -->
+        <nav class="navbar">
+          <ul class="navbar__list" id="navbar__list--pc">
+            <li class="navbar__item">
+              <a
+                href="/templates/index_reservation_staff.html"
+                class="navbar__link"
+                >Reservation</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a
+                href="/templates/index_search_staff.html"
+                class="navbar__link navbar__link--active"
+                >Flight</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a href="/templates/index_adding_staff.html" class="navbar__link"
+                >Add Flight</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a href="/templates/index_report_staff.html" class="navbar__link"
+                >Report</a
+              >
+            </li>
+            <li class="navbar__item">
+              <a
+                href="/templates/index_regulations_staff.html"
+                class="navbar__link"
+                >Regulations</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <!-- cta action -->
           <!-- cta action -->
-          <div class="header__action">
-            <a href="/templates/index_signin.html" class="header__action--login">Log in</a>
-            <a href="/templates/index_signup.html" class="btn header__action--signup">Sign up</a>
+          <div class="congratulation__action">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M304 128a80 80 0 1 0 -160 0 80 80 0 1 0 160 0zM96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM49.3 464H398.7c-8.9-63.3-63.3-112-129-112H178.3c-65.7 0-120.1 48.7-129 112zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3z"
+              />
+            </svg>
+            <p class="user_name">Staff</p>
           </div>
         </div>
+        <section class="info__personal" style="display: none">
+          <div class="info__name">
+            <h2 class="name__heading">Nguyen Hong Phat</h2>
+            <p class="name__desc">(Staff)</p>
+            <div class="underlined"></div>
+          </div>
+          <div class="user_functions">
+            <a href="#">
+              <div class="log_out">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="30"
+                  viewBox="0 0 512 512"
+                  fill="#00256C"
+                >
+                  <path
+                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 192 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 32C43 32 0 75 0 128L0 384c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"
+                  />
+                </svg>
+                <h2 class="name__functions">Log out</h2>
+              </div>
+            </a>
+          </div>
+        </section>
+      </div>
     </header>
 
     <!-- main -->
-        
-      <main>
-          <section class="lookup">
-            <div class="container">
-              
-              <!-- heading -->
-              <h1 class="lookup_heading">Flight Lookup</h1>
-              
-              <!-- search -->
-              <div class="container_lookup">
-    
-                <div class="search-top">
-                  <div class="search">
-                    <h2 class="search_heading">Flight</h2>
-                    <input class="input" type="text" placeholder="Search plane ID ..." />
-                  </div>
-  
-                  <div class="search">
-                    <h2 class="search_heading">Date</h2>
-                    <input class="input" type="text" placeholder="Search date of flight ..." />
-                  </div>
-                </div>
 
-                <div class="search-bottom">
-                  <div class="search">
-                    <h2 class="search_heading">From</h2>
-                    <input class="input" type="text" placeholder="Search for where to go ..." />
-                  </div>
-  
-                  <div class="search">
-                    <h2 class="search_heading">To</h2>
-                    <input class="input" type="text" placeholder="Search for where to arrive ..." />
-                  </div>
-                </div>
-    
-                <!-- <button id="btnSearch" class="btn_bar">Search</button> -->
+    <main>
+      <section class="lookup">
+        <div class="container">
+          <!-- heading -->
+          <h1 class="lookup_heading">Flight Lookup</h1>
+
+          <!-- search -->
+          <div class="container_lookup">
+            <div class="search-top">
+              <div class="search">
+                <h2 class="search_heading">Flight</h2>
+                <input
+                  class="input"
+                  type="text"
+                  placeholder="Search plane ID ..."
+                />
               </div>
-    
-              <!-- table -->
-              <table id="table_planes" class="table">
 
-                <!-- title -->
-                <div class="table_title">
-                  <tr>
-                    <th>STT</th>
-                    <th>Plane ID</th>
-                    <th>Plane From</th>
-                    <th>Plane To</th>
-                    <th>Depart</th>
-                    <th>flight time</th>
-                    <th>Seats available</th>
-                    <th>Seats booked</th>
-                  </tr>
-                </div>
-                
-                <!-- result 1 -->
-                <div class="table_row">
-                  <tr>
-                    <td>1</td>
-                    <td>HNPQ001</td>
-                    <td>HAN</td>
-                    <td>HCM</td>
-                    <td>31/12/2024 3:00</td>
-                    <td>02:00:00</td>
-                    <td>5</td>
-                    <td>95</td>
-                  </tr>
-                </div>
-    
-                <!-- result 2 -->
-                <div class="table_row">
-                  <tr>
-                    <td>2</td>
-                    <td>HNPQ002</td>
-                    <td>HAN</td>
-                    <td>HCM</td>
-                    <td>31/12/2024 3:00</td>
-                    <td>02:00:00</td>
-                    <td>5</td>
-                    <td>95</td>
-                  </tr>
-                </div>
-    
-              </table>
-    
+              <div class="search">
+                <h2 class="search_heading">Date</h2>
+                <input
+                  class="input"
+                  type="text"
+                  placeholder="Search date of flight ..."
+                />
+              </div>
             </div>
-          </section>
-      </main>
-    
-      </body>
-    </html>
-    
+
+            <div class="search-bottom">
+              <div class="search">
+                <h2 class="search_heading">From</h2>
+                <input
+                  class="input"
+                  type="text"
+                  placeholder="Search for where to go ..."
+                />
+              </div>
+
+              <div class="search">
+                <h2 class="search_heading">To</h2>
+                <input
+                  class="input"
+                  type="text"
+                  placeholder="Search for where to arrive ..."
+                />
+              </div>
+            </div>
+
+            <!-- <button id="btnSearch" class="btn_bar">Search</button> -->
+          </div>
+
+          <!-- table -->
+          <table id="table_planes" class="table">
+            <!-- title -->
+            <div class="table_title">
+              <tr>
+                <th>STT</th>
+                <th>Plane ID</th>
+                <th>Plane From</th>
+                <th>Plane To</th>
+                <th>Depart</th>
+                <th>flight time</th>
+                <th>Seats available</th>
+                <th>Seats booked</th>
+              </tr>
+            </div>
+
+            <!-- result 1 -->
+            <div class="table_row">
+              <tr>
+                <td>1</td>
+                <td>HNPQ001</td>
+                <td>HAN</td>
+                <td>HCM</td>
+                <td>31/12/2024 3:00</td>
+                <td>02:00:00</td>
+                <td>5</td>
+                <td>95</td>
+              </tr>
+            </div>
+
+            <!-- result 2 -->
+            <div class="table_row">
+              <tr>
+                <td>2</td>
+                <td>HNPQ002</td>
+                <td>HAN</td>
+                <td>HCM</td>
+                <td>31/12/2024 3:00</td>
+                <td>02:00:00</td>
+                <td>5</td>
+                <td>95</td>
+              </tr>
+            </div>
+          </table>
+        </div>
+      </section>
+    </main>
+    <script src="/asses/js/user_main.js"></script>
+  </body>
+</html>
