--- a/templates/index_signup.html
+++ b/templates/index_signup.html
@@ -95,6 +95,14 @@
             </div>
 
             <div class="field input-field">
+              <input type="text" placeholder="User ID" required />
+            </div>
+
+            <div class="field input-field">
+              <input type="tel" placeholder="Phone number" required />
+            </div>
+
+            <div class="field input-field">
               <input
                 type="text"
                 id="email"
