Chỉnh lại login vs sign up á.

--- a/templates/index_signin.html
+++ b/templates/index_signin.html
@@ -98,11 +98,14 @@
             <div class="field input-field">
               <input
                 type="password"
+                id="passwordInput"
                 placeholder="Password"
                 class="password"
                 required
               />
-              <i class="bx bx-hide eye-icon"></i>
+              <span class="password-toggle-icon"
+                ><i class="fas fa-eye"></i
+              ></span>
             </div>
 
             <div class="form-link">
