--- a/asses/css/style_sign.css
+++ b/asses/css/style_sign.css
@@ -115,6 +115,7 @@ a {
   font-size: 1.6rem;
   font-weight: 300;
   line-height: 1.75;
+  margin-right: 1px;
 }
 .navbar__link:hover,
 .navbar__link--active {
@@ -124,12 +125,11 @@ a {
   line-height: 1.75;
 }
 .header__action--signup {
-  min-width: 104px;
-  line-height: 44px;
+  padding: 8px 21px;
+  color: #c9d2da;
   font-size: 1.6rem;
-}
-.header__action--login {
-  margin-right: 7px;
+  font-weight: 300;
+  line-height: 1.75;
 }
 
 /* ========== main ========== */
@@ -195,16 +195,25 @@ form {
 .field input:focus {
   border-bottom-width: 2px;
 }
-.eye-icon {
+.password-toggle-icon {
   position: absolute;
   top: 50%;
   right: 10px;
   transform: translateY(-50%);
-  font-size: 18px;
-  color: #8b8b8b;
   cursor: pointer;
-  padding: 5px;
 }
+
+.password-toggle-icon i {
+  font-size: 18px;
+  line-height: 1;
+  color: #333;
+  transition: color 0.3s ease-in-out;
+}
+
+.password-toggle-icon i:hover {
+  color: #000;
+}
+
 .field button {
   color: #fff;
   background-color: #00256c;
