--- a/templates/index_signup.html
+++ b/templates/index_signup.html
@@ -124,19 +124,26 @@
               <input
                 type="password"
                 placeholder="Create password"
+                id="createPasswordInput"
                 class="password"
                 required
               />
+              <span class="password-toggle-icon" id="toggleCreatePassword"
+                ><i class="fas fa-eye"></i
+              ></span>
             </div>
 
             <div class="field input-field">
               <input
                 type="password"
                 placeholder="Confirm password"
+                id="confirmPasswordInput"
                 class="password"
                 required
               />
-              <i class="bx bx-hide eye-icon"></i>
+              <span class="password-toggle-icon" id="toggleConfirmPassword"
+                ><i class="fas fa-eye"></i
+              ></span>
             </div>
 
             <div class="field button-field">
