--- a/templates/index_report_admin.html
+++ b/templates/index_report_admin.html
@@ -41,10 +41,13 @@
             <nav class="navbar">
               <ul class="navbar__list" id="navbar__list--pc">
                 <li class="navbar__item">
+                  <a href="/templates/index_decentralization_admin.html" class="navbar__link">Decentralization</a>
+                </li>
+                <li class="navbar__item">
                   <a href="/templates/index_report_admin.html" class="navbar__link navbar__link--active">Report</a>
                 </li>
                 <li class="navbar__item">
-                  <a href="/templates/index_decentralization_admin.html" class="navbar__link">Decentralization</a>
+                  <a href="/templates/index_regulations_staff.html" class="navbar__link">Regulations</a>
                 </li>
               </ul>
             </nav>
