--- a/templates/admin_parameter.html
+++ b/templates/admin_parameter.html
@@ -169,12 +169,153 @@
         </div>
       </section>
 
-     
+      <!-- result -->
+      <section class="planes">
+        <div class="container">
+
+          <!-- title -->
+          <div class="add-booking">
+              <h1 class="planes_heading">Parameter</h1>
+              <div class="add-booking__icon" id="btnAdd">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" viewBox="0 0 512 512" fill="#00256C">
+                <path d="M192 93.7C192 59.5 221 0 256 0c36 0 64 59.5 64 93.7l0 66.3L497.8 278.5c8.9 5.9 14.2 15.9 14.2 26.6v56.7c0 10.9-10.7 18.6-21.1 15.2L320 320v80l57.6 43.2c4 3 6.4 7.8 6.4 12.8v42c0 7.8-6.3 14-14 14c-1.3 0-2.6-.2-3.9-.5L256 480 145.9 511.5c-1.3 .4-2.6 .5-3.9 .5c-7.8 0-14-6.3-14-14V456c0-5 2.4-9.8 6.4-12.8L192 400V320L21.1 377C10.7 380.4 0 372.7 0 361.8V305.1c0-10.7 5.3-20.7 14.2-26.6L192 160V93.7z"/></svg>
+                <a class="add__tickets" href="#">Add plane</a>
+              </div>
+          </div>
+
+          <!-- onclick -->
+          <dialog id="dialog_add">
+            <div class ="wrapper">
+              <form>
+                <div class= "field_add"> 
+                  <label class="label">Plane ID:</label>
+                  <input required class="input" type="text" placeholder="Enter Plane ID">
+                  <label class="label">Plane Name:</label>
+                  <input required id='duration_dialog' class="input" type="text" placeholder="Enter Plane Name" >
+                  <label class="label">Manufacture ID:</label>
+                  <input required id='note_dialog' class="input" type="text" placeholder="Enter Manufacture ID">
+                  <div class="button">
+                    <button id="confirmAdd" class="btn">Add</button>
+                    <button id="cancelAdd" class="btn">Cancel</button>
+                  </div>
+              </div>
+            </form>
+            </div>
+          </dialog>
+
+          <!-- table -->
+          <table id="table_planes" class="table">
+            
+              <tr>
+                <th style="width: 50%;">Parameter</th>
+                <th>Value</th>
+                <th style="width: 15%;">Action</th>
+              </tr>
+
+              <tr>
+                <td>Minimum Flight Time</td>
+                <td class="parameter">30</td>
+                <!-- <td th:value="${thamso.tgBayToiThieu}" th:text="${thamso.tgBayToiThieu}"></td> -->
+                <td>
+                    <a onclick="editParameter(this.parentElement.previousElementSibling)">
+                    <button class="btn-delete">Edit</button></a>
+                </td>
+                </tr>
+    
+            
+              <tr>
+                <td>Minimum Stop Time</td>
+                <td class="parameter">30</td>
+                <td>
+                    <a onclick="editParameter(this.parentElement.previousElementSibling)">
+                    <button class="btn-delete">Edit</button></a>
+                </td>
+              </tr>
+            
+              <tr>
+                
+                <td>Maximum Stop Time</td>
+                <td class="parameter">30</td>
+                <td>
+                    <a onclick="editParameter(this.parentElement.previousElementSibling)">
+                    <button class="btn-delete">Edit</button></a>
+                </td>
+              </tr>
+
+              <tr>
+                
+                <td>Maximum Number of Stop Airports</td>
+                <td class="parameter">30</td>
+                <td>
+                    <a onclick="editParameter(this.parentElement.previousElementSibling)">
+                    <button class="btn-delete">Edit</button></a>
+                </td>
+              </tr>
+
+              <tr>
+                
+                <td>Latest Ticket Booking Time</td>
+                <td class="parameter">30</td>
+                <td>
+                    <a onclick="editParameter(this.parentElement.previousElementSibling)">
+                    <button class="btn-delete">Edit</button></a>
+                </td>
+              </tr>
+
+              <tr>
+                <td>Latest Cancellation Time</td>
+                <td class="parameter">30</td>
+                <td>
+                    <a onclick="editParameter(this.parentElement.previousElementSibling)">
+                    <button class="btn-delete">Edit</button></a>
+                </td>
+              </tr>
+              
+          </table>
+
+        </div>
+      </section>
+
+      <!-- <button class="btn-delete" style="align-content: center;"
+      onclick="saveChanges()">Save</button> -->
 
     </main>
 
     <script src="/asses/js/user_main.js"></script>
     <script src="/asses/js/admin_regulation.js"></script>
+    <script>
+        function editParameter(element) {
+            // Tạo phần tử input
+            var input = document.createElement('input');
+            
+            // Gán giá trị hiện tại của ô chứa tham số vào phần tử input
+            input.value = element.innerText.trim();
+
+            input.style.width = '30px';
+            input.style.border = 'Transition';
+
+            // Thay thế nội dung của ô chứa tham số bằng phần tử input
+            element.innerHTML = '';
+            element.appendChild(input);
+
+                        
+            input.selectionStart = input.selectionEnd = input.value.length;
+            
+            // Xác định sự kiện khi người dùng kết thúc chỉnh sửa
+            input.addEventListener('blur', function() {
+                // Cập nhật giá trị
+                element.innerText = input.value.trim();
+            });
+            
+            
+            input.select();
+        }
+
+        function saveChanges() {
+            // Đoạn mã để lưu các thay đổi vào máy chủ có thể được thêm ở đây
+            alert("Changes saved successfully!");
+        }
+    </script>
 
 </body>
 </html>
